--- a/WoofNibblesBackEnd/woofnibbles/src/main/resources/application.properties
+++ b/WoofNibblesBackEnd/woofnibbles/src/main/resources/application.properties
@@ -17,3 +17,9 @@ spring.jpa.show-sql=true
 # Debugging SQL Queries (Optional)
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# Razorpay Configuration
+# Replace these with your actual Razorpay test keys from dashboard
+# Replace these with your actual Razorpay test keys from dashboard
+razorpay.key.id=rzp_test_pGJiYviIJtVNJI
+razorpay.key.secret=ud7vX1vea7v7k5T8QIRDZJs9
