--- a/WoofNibblesBackEnd/woofnibbles/pom.xml
+++ b/WoofNibblesBackEnd/woofnibbles/pom.xml
@@ -63,6 +63,19 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+        <dependency>
+            <groupId>com.razorpay</groupId>
+            <artifactId>razorpay-java</artifactId>
+            <version>1.4.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20231013</version>
+        </dependency>
+
 	</dependencies>
 
 	<build>
